minor change to layout

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 </head>
 <body>
     <section id='home'>
+        <!-- background -->
+        
         <header>
         <!-- logo
         Login Button
-        hamburger menu
-        background -->
+        hamburger menu -->
         </header>
+
         <div>
             <!-- title
             paragraph
