fixed script error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Javascript -->
     <script>
-        <!-- Hamburger Animation -->
+        // Hamburger Animation
         function myFunction(x) {
             x.classList.toggle("change");
         }
