Added new images and content to the about app section

--- a/index.html
+++ b/index.html
@@ -29,8 +29,52 @@
         </div>
     </section>
 
-    <section id='about'>
-
+    <section class="aboutApp">
+<div>
+    <h3>Mission statement</h3>
+    <p> Our app helps to match employers and job seekers who are mutually interested in extending the conversation to explore the potential future of a business relationship.
+    </p>
+      
+    <ul>
+       <li>People are always looking for jobs.</li> 
+       <li>The recruitment business is an invaluable industry.</li> 
+        <li>The recruitment and technology industries together is ingenious.</li>
+        <li>Using ideas from companies like Tinder and LinkedIn is a great idea - because they work.</li>
+    </ul>    
+    
+        <style>
+        .appImgs{
+            overflow-x: scroll;
+            overflow-y: hidden;
+            white-space: nowrap;
+            }
+        .appImgs::-webkit-scrollbar{
+                display: none;
+            }
+        .about{
+            display: inline-block;
+           /* width: 24%; for desktop*/
+          width: 45%;        
+        }
+        .about img{
+            width:100%;
+        }
+        </style>
+        <div class=appImgs>
+            <div class="homeImg about">
+                <img src= "images/DroomHomepage.png" >
+            </div>
+            <div class= "likeImg about">
+                <img src= "images/Like.png" >
+            </div>
+            <div class=" dislikeImg about">
+                <img src= "images/Dislike.png" >
+            </div>
+            <div class=" messagesImg about">
+                <img src= "images/Messages.png" >
+            </div>
+        </div>
+</div>
     </section>
 
     <section id='team'>
