Added CSS animations

--- a/index.html
+++ b/index.html
@@ -22,25 +22,26 @@
 </head>
 
 <body>
-    <section id='home'>
-        <!-- background -->
+    <div class="container">
+        <section id='home'>
+            <!-- background -->
 
-        <header>
-            <!-- logo
+            <header>
+                <!-- logo
         Login Button
         hamburger menu -->
-        </header>
+            </header>
 
-        <div>
-            <!-- title
+            <div>
+                <!-- title
             paragraph
             2 inputs
             button -->
-        </div>
-    </section>
+            </div>
+        </section>
 
-    <section class="aboutApp">
-        <div>
+        <section class="aboutApp">
+
             <div class="aboutTextBox">
                 <p> Our app helps to match employers and job seekers who are mutually
                     interested in extending the conversation to explore the potential
@@ -51,7 +52,7 @@
                     <h2>About App</h2>
                 </div>
                 <div>
-                    <i style="font-size:24px" class="fa ana">&#xf054;</i>
+                    <i style="font-size:24px" class="fa">&#xf054;</i>
                     <ul class="transform-active">
                         <li>People are always looking for jobs.</li>
                         <li>The recruitment business is an invaluable industry.</li>
@@ -64,106 +65,108 @@
 
 
             <div class=appImgs>
-                <div class="homeImg about">
-                    <img src="images/DroomHomepage.png">
-                </div>
-                <div class="likeImg about">
-                    <img src="images/Like.png">
-                </div>
-                <div class=" dislikeImg about">
-                    <img src="images/Dislike.png">
-                </div>
-                <div class=" messagesImg about">
-                    <img src="images/Messages.png">
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <section class="teamContainer">
-        <h2>Meet the team</h2>
-        <div class="teamCardsBox">
-            <div class="card1 card">
-                <img src="images/Th5tch3r.png">
-                <h3>Thatcher Phan</h3>
-                <p>Front End Framework Developer</p>
-
-                <div class="socialLinks">
-                    <a href="https://github.com/Th5tch3r" style="font-size:24px" class="fa">&#xf09b;</a>
-                    <a href="#" style="font-size:24px" class="fa">&#xf08c;</a>
+                <div class="test">
+                    <div class="homeImg about">
+                        <img src="images/DroomHomepage.png">
+                    </div>
+                    <div class="likeImg about">
+                        <img src="images/Like.png">
+                    </div>
+                    <div class=" dislikeImg about">
+                        <img src="images/Dislike.png">
+                    </div>
+                    <div class=" messagesImg about">
+                        <img src="images/Messages.png">
+                    </div>
                 </div>
             </div>
-            <div class="card2 card">
-                <img src="images/FreedomWriter.jpeg">
-                <h3>Natalie Davis</h3>
-                <p>Front End Developer</p>
-                <div class="socialLinks">
-                    <a href="https://github.com/FreedomWriter" style="font-size:24px" class="fa">&#xf09b;</a>
-                    <a href="https://www.linkedin.com/in/natalie-davis-64111595/" style="font-size:24px"
-                        class="fa">&#xf08c;</a>
+        </section>
+
+        <section class="teamContainer">
+            <h2>Meet the team</h2>
+            <div class="teamCardsBox">
+                <div class="card1 card">
+                    <div class="memberPhoto"> <img src="images/jessharrison83.jpeg" alt="Jess Berler"></div>
+                    <h3>Jess Berler</h3>
+                    <p>Project Lead</p>
+                    <div class="socialLinks">
+                        <a href="https://github.com/jessharrison83" class="fa">&#xf09b;</a>
+                        <a href="https://www.linkedin.com/in/jessica-harrison-2018/" class="fa">&#xf08c;</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card3 card">
-                <img src="images/jessharrison83.jpeg">
-                <h3>Jess Berler</h3>
-                <p>Project Lead</p>
-                <div class="socialLinks">
-                    <a href="https://github.com/jessharrison83" style="font-size:24px" class="fa">&#xf09b;</a>
-                    <a href="https://www.linkedin.com/in/jessica-harrison-2018/" style="font-size:24px"
-                        class="fa">&#xf08c;</a>
+                <div class="card2 card">
+                    <div class="memberPhoto"> <img src="images/Th5tch3r.png" alt="Thatcher Phan"></div>
+                    <h3>Thatcher Phan</h3>
+                    <p>Front End Framework Developer</p>
+
+                    <div class="socialLinks">
+                        <a href="https://github.com/Th5tch3r" class="fa">&#xf09b;</a>
+                        <a href="#" class="fa">&#xf08c;</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card4 card">
-                <img src="images/TimRexJeff.jpeg">
-                <h3>Tim Jeffries</h3>
-                <p>Front End Developer</p>
-                <div class="socialLinks">
-                    <a href="https://github.com/TimRexJeff" style="font-size:24px" class="fa">&#xf09b;</a>
-                    <a href="https://www.linkedin.com/in/tim-jeffries-0519a099/" style="font-size:24px"
-                        class="fa">&#xf08c;</a>
+                <div class="card3 card">
+                    <div class="memberPhoto"> <img src="images/FreedomWriter.jpeg" alt="Natalie Davis"></div>
+                    <h3>Natalie Davis</h3>
+                    <p>Front End Developer</p>
+                    <div class="socialLinks">
+                        <a href="https://github.com/FreedomWriter" class="fa">&#xf09b;</a>
+                        <a href="https://www.linkedin.com/in/natalie-davis-64111595/" class="fa">&#xf08c;</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card5 card">
-                <img src="images/midnight-hunt.jpeg">
-                <h3>Midnight Asensi</h3>
-                <p>Web UI developer</p>
-                <div class="socialLinks">
-                    <a href="https://github.com/midnight-hunt" style="font-size:24px" class="fa">&#xf09b;</a>
-                    <a href="#" style="font-size:24px" class="fa">&#xf08c;</a>
+
+                <div class="card4 card">
+                    <div class="memberPhoto"> <img src="images/TimRexJeff.jpeg" alt="Tim Jeffries"> </div>
+                    <h3>Tim Jeffries</h3>
+                    <p>Front End Developer</p>
+                    <div class="socialLinks">
+                        <a href="https://github.com/TimRexJeff" class="fa">&#xf09b;</a>
+                        <a href="https://www.linkedin.com/in/tim-jeffries-0519a099/" class="fa">&#xf08c;</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card6 card">
-                <img src="images/anatulea.jpeg">
-                <h3>Ana Tulea</h3>
-                <p>Web UI developer</p>
-                <div class="socialLinks">
-                    <a href="https://github.com/anatulea" style="font-size:24px" class="fa">&#xf09b;</a>
-                    <a href="https://www.linkedin.com/in/ana-tulea-8b800a170/" style="font-size:24px"
-                        class="fa">&#xf08c;</a>
+                <div class="card5 card">
+                    <div class="memberPhoto"> <img src="images/anatulea.jpeg" alt="Ana Tulea"></div>
+                    <h3>Ana Tulea</h3>
+                    <p>Web UI developer</p>
+                    <div class="socialLinks">
+                        <a href="https://github.com/anatulea" class="fa">&#xf09b;</a>
+                        <a href="https://www.linkedin.com/in/ana-tulea-8b800a170/" class="fa">&#xf08c;</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card7 card">
-                <img src="images/jada.jpeg">
-                <h3>Jada White</h3>
-                <p>UX Designer</p>
-                <div class="socialLinks">
-                    <a href="https://github.com/jaywhite010" style="font-size:24px" class="fa">&#xf09b;</a>
-                    <a href="https://www.linkedin.com/in/jada-white014/" style="font-size:24px" class="fa">&#xf08c;</a>
+                <div class="card6 card">
+                    <div class="memberPhoto"> <img src="images/midnight-hunt.jpeg" alt="Midnight Asensi"></div>
+                    <h3>Midnight Asensi</h3>
+                    <p>Web UI developer</p>
+                    <div class="socialLinks">
+                        <a href="https://github.com/midnight-hunt" class="fa">&#xf09b;</a>
+                        <a href="#" class="fa">&#xf08c;</a>
+                    </div>
                 </div>
+
+                <div class="card7 card">
+                    <div class="memberPhoto"> <img src="images/jada.jpeg" alt="Jada White"></div>
+                    <h3>Jada White</h3>
+                    <p>UX Designer</p>
+                    <div class="socialLinks">
+                        <a href="https://github.com/jaywhite010" class="fa">&#xf09b;</a>
+                        <a href="https://www.linkedin.com/in/jada-white014/" class="fa">&#xf08c;</a>
+                    </div>
+                </div>
+
             </div>
 
-        </div>
+        </section>
 
-    </section>
+        <section id='contact'>
 
-    <section id='contact'>
+        </section>
 
-    </section>
-
-    <footer>
-
-    </footer>
+        <footer>
+            <div class=" footer">
+                <span class="copy-right">© Droom 2019</span>
+                <a href="https://github.com/Build-Week-Droom-PT" class="fa fa-github"></a>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
