--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
                     <header>
                 <img id='logo' src="images/Logo.png" alt="Droom Logo">
 
-                <button>LOG IN</button>
-    
-                <div class="container" id='hamburger' onclick="myFunction(this)">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
+                <div id="spacer">
+                    <button>LOG IN</button>
+        
+                    <div class="container" id='hamburger' onclick="myFunction(this)">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
                 </div>
             </header>
 
