--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
 
         <section class='midnight' id='contact'>
             <div id="contactText">
-                <h2>Contact Us</h2>
+                <h3>Contact Us</h3>
 
                 <p>Got a question? We'd love to hear from you. Drop us a message and we'll get back to you as soon as possible.</p>
             </div>
-            
+
             <form action='' method='post'>
                 <fieldset>
                         Name<br>
@@ -252,7 +252,7 @@
                         <br>Message*<br>
                         <input type="text" name='message' id='message'>
 
-                        <br><input type="submit" value='Submit' id='submit'>
+                        <br><input type="submit" value='Send Message' id='submit'>
                 </fieldset>
             </form>
         </section>
