added search bar styles

--- a/index.html
+++ b/index.html
@@ -77,16 +77,21 @@
             </div>
     
             <div id="input">
+                <div id="inputText">
+                    <h3 id='what'>What</h3>
+                    
+                    <h3 id='where'>Where</h3>
+                </div>
+
                 <form action="" id='search'>
-                    What
                     <select name="job" id="whatSel">
                         <option value="">Job title, skill or company</option>
                     </select>
-                    Where:
+
                     <select name="" id="whereSel">
                         <option value="">Town, city or zipcode</option>
                     </select>
-                    <input type="submit" value='Join Droom'>
+                    <input type="submit" value='Join Droom' id='join'>
                 </form>
             </div>
         </section>
