--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
             <div class=appImgs>
                 <div class="test">
                     <div class="homeImg about">
-                        <img src="images/DroomHomepage.png">
+                        <img src="images/DroomHomepage.png"
+                        >
                     </div>
                     <div class="likeImg about">
                         <img src="images/Like.png">
@@ -211,9 +212,7 @@
                     <div class="memberInfo">
                         <h3>Ana Tulea</h3>
                         <p>Web UI developer</p>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                            been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                            galley of type and scrambled it to make a type specimen book.</p>
+                        <p>On my journey to become a Full Stack Web Developer. Passionate about learning to create beautiful designs. </p>
                         <div class="socialLinks">
                             <a href="https://github.com/anatulea" class="fa">&#xf09b;</a>
                             <a href="https://www.linkedin.com/in/ana-tulea-8b800a170/" class="fa">&#xf08c;</a>
