Added Final changes

--- a/index.html
+++ b/index.html
@@ -216,9 +216,10 @@
                     <div class="memberInfo">
                             <h3>Tim Jeffries</h3>
                             <p>Front End Developer</p>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                                galley of type and scrambled it to make a type specimen book.</p>
+                            <p>A student at Lambda School. Learning the trades of a full stack web developer.What direction will I lead the world?
+                                My personal mission is to help the world move past the fear of change and embrace technology.
+                                Ultimately, allowing everyone to be the creators we were designed to be.
+                               </p>
                             <div class="socialLinks">
                                 <a href="https://github.com/TimRexJeff" class="fa">&#xf09b;</a>
                                 <a href="https://www.linkedin.com/in/tim-jeffries-0519a099/" class="fa">&#xf08c;</a>
@@ -230,7 +231,7 @@
                     <div class="memberInfo">
                         <h3>Ana Tulea</h3>
                         <p>Web UI developer</p>
-                        <p>On my journey to become a Full Stack Web Developer. Passionate about learning to create beautiful designs. </p>
+                        <p>I'm on my journey to become a Full Stack Web Developer. I made a big career change moving from dentistry to computers. Fall in love with the field and became very passionate about learning to create beautiful designs and applications. Planning on mixing both passions and creating apps that will help doctors and their assistants to have easier jobs. Since a smile is a decision, why not make the choice? </p>
                         <div class="socialLinks">
                             <a href="https://github.com/anatulea" class="fa">&#xf09b;</a>
                             <a href="https://www.linkedin.com/in/ana-tulea-8b800a170/" class="fa">&#xf08c;</a>
@@ -292,6 +293,9 @@
                 </fieldset>
             </form>
         </section>
+        <div class="hearSoon">
+            <h1>We hope to hear from you soon!</h1>
+        </div>
 
         <footer>
             <div class=" footer">
