--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-
     <title>Droom</title>
 
     <link href='css/index.css' rel='stylesheet'>
@@ -123,13 +118,13 @@
                         <img src="images/DroomHomepage.png">
                     </div>
                     <div class="likeImg about">
-                        <img src="images/Like.png">
+                        <img src="images/like.png">
                     </div>
                     <div class=" dislikeImg about">
-                        <img src="images/Dislike.png">
+                        <img src="images/dislike.png">
                     </div>
                     <div class=" messagesImg about">
-                        <img src="images/Messages.png">
+                        <img src="images/messages.png">
                     </div>
                     <div class="chatImg about">
                         <img src="images/chat.png">
