added link to react app

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href=#home javascript:void(0)><img id='logo' src="images/Logo.png" alt="Droom Logo"></a>
 
                 <div class="spacer">
-                    <button>LOG IN</button>
+                    <a href="https://hungry-davinci-07e745.netlify.com/"><button>LOG IN</button></a>
 
                     <div  class="open">
                     <span class="cls"></span>
@@ -105,7 +105,7 @@
                     <select name="" id="whereSel">
                         <option value="">Town, city or zipcode</option>
                     </select>
-                    <input type="submit" value='Join Droom' id='join'>
+                    <a href="https://hungry-davinci-07e745.netlify.com/"><input type="submit" value='Join Droom' id='join'></a>
                 </form>
             </div>
         </section>
